# lir3a

./: LICENSE  README.md  pyproject.toml
examples/: segmentation_example.py  segmentation_without_learning.py
src/lir3a/: AnalyzeTextures.py  CPTV.py  DKL.py  FinDiffPhysics.py  GenMasks.py  GenTextures.py  HetTextures.py  LearnWeights.py  LinRegDataFid.py  LinRegPhysics.py  RegularizedLinReg.py  __init__.py  utils.py
