[build-system]
requires = ["setuptools>=69", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lir3a"
dynamic = ["version"]   # 👈 version pilotée par git
description = "LiR³A: multiscale regularity & anisotropy estimation with (regularized) linear regression."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "Leo DAVY", email = "leo.davy@ens-lyon.fr" }
]
keywords = ["regularity", "anisotropy", "multiscale", "regression", "optimization", "chambolle-pock"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Image Processing",
  "Typing :: Typed"
]
dependencies = [
  "numpy>=2.0",
  "deepinv>=0.3.0",
  "wandb",
  "h5py",
  "pyafbf>=0.2.9",
  "scikit-learn",
  "imageio"
]

[project.urls]
Homepage = "https://github.com/DavyL/lir3a"

[project.scripts]
lir3a = "lir3a.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["lir3a*"]

[tool.setuptools.package-data]
"lir3a" = ["py.typed"]

[tool.setuptools_scm]
version_scheme = "release-branch-semver"
local_scheme = "node-and-date"
write_to = "src/lir3a/_version.py"